chore: update versions and release process